--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
   filter: invert(0.8);
 }
+#demo-simple-select{
+  display: flex;
+  gap: 4px !important;;
+  flex-direction: row;
+}
